--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@ body {
 .App {
   text-align: center;
   padding: 30px 30px;
+
 }
 
 .App-logo {
@@ -103,6 +104,19 @@ ul li:nth-child(4n + 4) .details-btn {
   z-index: 1000;
 }
 
+.charts-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
+}
+
+
+@media (max-width: 768px) {
+  .charts-container {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+}
 
 
 @media (prefers-reduced-motion: no-preference) {
